--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
+    ,"antd": "^5.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
