--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
-    ,"antd": "^5.10.1"
+    ,"antd": "^5.10.1",
+    "react-virtuoso": "^3.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
